<resources>
    <string name="app_name">BrExpress</string>

    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="address">Endereço</string>
    <string name="cpf">Cpf</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="salary">Salário</string>
    <string name="sector">Setor</string>
    <string name="function">Função</string>
    <string name="old_password">Senha Antiga</string>
    <string name="login">Login</string>
    <string name="create_new_acc">Criar uma nova conta</string>
    <string name="register">Cadastrar</string>
    <string name="back">Voltar</string>
    <string name="forget_password">Esqueceu Senha?</string>
    <string name="product_name">Nome do Produto</string>
    <string name="product_price">Preço do Produto</string>
    <string name="discount">Desconto</string>
    <string name="quantity">Qtd</string>
    <string name="company">Empresa</string>
    <string name="payment">Mensalidade</string>
    <string name="product_description">Descrição do Produto</string>
    <string name="product_picture">Foto do Produto</string>
    <string name="save_data">Salvar Dados</string>
    <string name="delete_data">Remover Dados</string>
    <string name="choose_pictures">Escolher mais fotos</string>
    <string name="delete">Apagar</string>
    <string name="login_invalid">Usuário e/ou senha incorretos</string>
    <string name="invalid_email">Campo email está inválido</string>
    <string name="invalid_cpf">Campo cpf está inválido</string>
    <string name="invalid_company">Campo empresa deve conter no mínimo 5 caracters</string>
    <string name="invalid_payment">Campo pagamento não pode ser zero</string>
    <string name="not_match_pwd">As senhas não conferem</string>
    <string name="min_pwd_length">Campo senha deve conter no mínimo 5 caracters</string>
    <string name="min_address_length">Campo endereço deve conter no mínimo 5 caracters</string>
    <string name="min_product_name_length">Campo nome deve conter no mínimo 5 caracters</string>
    <string name="min_product_description_length">Campo descrição deve conter no mínimo 15 caracters</string>
    <string name="min_product_price">Campo preço não pode ser zero</string>
    <string name="max_product_qtd_available">É permitido no máximo 999 unidades do produto</string>
    <string name="max_product_discount_available">É permitido no máximo 99% de desconto</string>
    <string name="selected_a_picture">Selecione uma foto para o produto</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="product_saved_success">Produto cadastrado com sucesso!</string>
    <string name="product_saved_error">Falha ao cadastrar produto. Tente Novamente!</string>
    <string name="product_updated_success">Produto atualizado com sucesso!</string>
    <string name="product_updated_error">Falha ao atualizar produto. Tente Novamente!</string>
    <string name="client_saved_success">Cadastrado realizado com sucesso!</string>
    <string name="client_saved_error">Falha ao cadastrar. Tente Novamente!</string>
    <string name="client_updated_success">Perfil atualizado com sucesso!</string>
    <string name="client_updated_error">Falha ao atualizar perfil. Verifique sua senha antiga!</string>
    <string name="shipping_saved_success">Cadastrado realizado com sucesso!</string>
    <string name="shipping_saved_error">Falha ao cadastrar. Tente Novamente!</string>
    <string name="shipping_updated_success">Transportadora atualizada com sucesso!</string>
    <string name="shipping_updated_error">Falha ao atualizar transportadora. Verifique sua senha antiga!</string>
    <string name="no_internet_connection">Sem conexão com a internet.</string>
    <string name="failed_to_load_user">Falha ao carregar perfil</string>
    <string name="failed_to_load_products">Falha ao carregar produtos</string>
    <string name="failed_to_load_users">Falha ao carregar clientes</string>
    <string name="failed_to_load_orders">Falha ao carregar pedidos</string>
    <string name="failed_to_load_worker">Falha ao carregar funcionário</string>
    <string name="failed_to_load_workers">Falha ao carregar funcionários</string>
    <string name="failed_to_load_all_shipping">Falha ao carregar transportadoras</string>
    <string name="price">R$ %1$.2f</string>
    <string name="valor">Valor</string>
    <string name="discount_image">%1$.0f%% Off</string>
    <string name="products">Produtos</string>
    <string name="clients">Clientes</string>
    <string name="employee">Funcionários</string>
    <string name="shipping">Transportadora</string>
    <string name="home">Principal</string>
    <string name="my_account">Minha Conta</string>
    <string name="my_orders">Meus Pedidos</string>
    <string name="support">Suporte</string>
    <string name="logout">Sair</string>
    <string name="see_profile">Ver perfil</string>
    <string name="do_login">Faça login</string>
    <string name="join_us">Junte-se a nós</string>
    <string name="br">BR</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm_buy_product">Realmente deseja comprar este produto?
        Esta Ação não poderá ser desfeita.</string>
    <string name="confirm_delete_product">Realmente deseja remover estes produtos?
        Esta Ação não poderá ser desfeita.</string>
    <string name="confirm_delete_workers">Realmente deseja remover estes funcionários?
    Esta Ação não poderá ser desfeita.</string>
    <string name="confirm_delete_shipping">Realmente deseja remover estas transportadoras?
    Esta Ação não poderá ser desfeita.</string>
    <string name="remove">Remover</string>
    <string name="products_removed_success">Produtos removidos com sucesso!</string>
    <string name="products_removed_error">Falha ao remover produtos. Tente novamente!</string>

    <string name="workers_removed_success">Funcionários removidos com sucesso!</string>
    <string name="workers_removed_error">Falha ao remover funcionário. Tente novamente!</string>

    <string name="shipping_removed_success">Transportadoras removidas com sucesso!</string>
    <string name="shipping_removed_error">Falha ao remover transportadoras. Tente novamente!</string>

    <string name="tanks">OBRIGADO</string>
    <string name="working_for_credit_card">Parabéns pela compra. Estamos trabalhando para compras com cartão de crédito!</string>
    <string name="follow_history">Acompanhe seu pedido pelo histórico!</string>
    <string name="products_bought_error">Falha ao comprar o produto. Tente novamente!</string>
    <string name="do_login_first">Faça login antes de comprar algum item!</string>
    <string name="no_product_available">Produto esgotado!</string>
    <string name="buy">Comprar</string>

    <string name="card_name">Nome</string>
    <string name="card_number">Número</string>
    <string name="card_cvv">CVV</string>
    <string name="card_date_expires">Data</string>
    <string name="pay">Pagar</string>

    <string name="waiting_payment">Aguardando pagamento</string>
    <string name="payment_accept">Pagamento aceito</string>
    <string name="shipping_status">A caminho do endereço</string>
    <string name="delivered">Entregue ao destinatário</string>
    <string name="arrival_date">Data prevista da chegada: %1$s</string>
    <string name="purchase_date">Data do pedido: %1$s</string>
</resources>
