<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item android:id="@+id/my_account"
            android:icon="@drawable/ic_account"
            android:title="@string/my_account" />
        <item android:id="@+id/my_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/my_orders" />
        <item android:id="@+id/support"
            android:icon="@drawable/ic_support"
            android:title="@string/support" />
        <item android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>