<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp">


        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/email_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/address_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/address"
                android:maxLines="1"/>


            <EditText
                android:id="@+id/cpf_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/cpf"
                android:maxLength="11"
                android:maxLines="1"
                android:inputType="number" />

            <EditText
                android:id="@+id/salary_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/salary"
                android:maxLines="1"
                android:inputType="number"/>

            <EditText
                android:id="@+id/sector_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/sector"
                android:maxLines="1"
                android:inputType="textAutoComplete"/>

            <EditText
                android:id="@+id/function_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/function"
                android:maxLines="1"
                android:inputType="textAutoCorrect"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>