<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp">


        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:textColorHint="@android:color/darker_gray"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/company_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/company"
                android:textColorHint="@android:color/darker_gray"
                android:maxLines="1"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/payment_text"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/payment"
                android:textColorHint="@android:color/darker_gray"
                android:maxLines="1"
                android:inputType="number"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>