<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_weight="0.75"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_background">
                        <ImageView
                            android:id="@+id/selected_product_image"
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:src="@drawable/no_product_image"
                            android:adjustViewBounds="true"
                            android:alpha="1"/>
                    </LinearLayout>


                    <ImageView
                        android:id="@+id/select_photos"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_camera"
                        android:scaleType="fitCenter"
                        android:layout_gravity="bottom|end"/>

                </FrameLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/product_name"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/product_price"
                        android:maxLines="1"
                        android:inputType="number"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <EditText
                            android:id="@+id/product_discount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/discount"
                            android:maxLines="1"
                            android:inputType="number"/>

                        <EditText
                            android:id="@+id/product_qtd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/quantity"
                            android:maxLines="1"
                            android:inputType="number"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginTop="10dp"
                android:hint="@string/product_description"
                android:lines="5"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>